Fix overflow bug

--- a/css/navbar/_dropdowns.scss
+++ b/css/navbar/_dropdowns.scss
@@ -71,7 +71,7 @@ nav.navbar {
       position: unset;
       ul {
         width: 100%;
-        height: 100%;
+        height: fit-content;
         top: 0;
         justify-content: center;
         li {
